<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HunterMcManus - App3</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="signup">Sign-Up</string>
    <string name="login">Login</string>
    <string name="guest">Guest</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="title_activity_semester">Semesters</string>
    <string name="title_activity_course">Courses</string>
    <string name="title_activity_assignment">Assignments</string>
    <string name="title_activity_show_assignment">ShowAssignmentActivity</string>
    <string name="name">Name:</string>
    <string name="type">Type:</string>
    <string name="priority">Priority</string>
    <string name="pointvalue">Point Value:</string>
    <string name="duedate">Due Date:</string>
    <string name="menu_add">Add</string>
    <string name="title_activity_add_semester">Add A Semester</string>
    <string name="title_activity_add_course">Add A Course</string>
    <string name="title_activity_add_assignment">Add An Assignment</string>
    <string name="setting">Settings</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="submit">Submit</string>
    <string name="addsemesterlabel">Add A Semester</string>
    <string name="fall">Fall</string>
    <string name="spring">Spring</string>
    <string name="summer">Summer</string>
    <string name="winter">Winter</string>
    <string name="other">Other</string>
    <string name="year">Year</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="assignmentcategory">Category (eg. Projects)</string>
    <string name="weight">Weight</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_warning">Warning</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="warningmessage">If you don\'t sign in your data will be lost if you uninstall the app.  Are you sure you want to continue?</string>
    <string name="warning">Warning!</string>
    <string name="action_user">Logout</string>
    <string name="action_user_signup">Login</string>

    <string-array name="priorityArray">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
    <string-array name="testTypesArray">
        <item>Paper</item>
        <item>Project</item>
        <item>Test</item>
    </string-array>
    <string-array name="testSemesters">
        <item>Fall 2013</item>
        <item>Spring 2013</item>
        <item>Fall 2012</item>
    </string-array>

    <string name="confirmPassword">Confirm Password</string>
    <string name="nonmatchingpasswords">Your passwords don\'t match. Please try again</string>
    <string name="invaidemail">The email you entered is in an invalid format</string>
    <string name="schoollabel">School Name:</string>
    <string name="semestertypelabel">How are your semesters broken down?</string>

    <string-array name="termsArray">
        <item>Semesters</item>
        <item>Quarters</item>
        <item>Trimesters</item>
    </string-array>

    <string name="invalidlogin">You entered an invalid username or password, please try again</string>
    <string name="addmore">Add More</string>
    <string name="allrequiredfields">You did not fill out all of the required fields</string>
    <string name="title_course_list">Courses</string>
    <string name="title_course_detail">Course Detail</string>
    <string name="testassignment">Assignment 1</string>
    <string name="testPriority">High</string>
    <string name="testType">Project</string>
    <string name="testPointValue">100</string>
    <string name="testDueDate">10/17/2013</string>
    <string name="duplicateemail">Sorry, that email already exists</string>
    
    <string name="menu_add_course">Add Course</string>
    <string name="menu_add_assignment">Add Assignment</string>
    <string name="yearError">You must enter a year</string>
    <string name="courseNameError">You must enter a course name</string>
    <string name="courseTypeError">You must enter at least 1 course type</string>
    <string name="assignmentNameError">You must enter an assignment name</string>
    <string name="assignmentPointsError">You must enter a point value</string>
    <string name="appendDueDate">Due Date:</string>
    <string name="appendPriority">Priority:</string>
    <string name="appendPointValue">Point Value:</string>
    <string name="appendType">Type:</string>
    <string name="noSemester">(No semesters to show, go add some!)</string>
    <string name="noCourse">(No courses to show, go add some!)</string>
    <string name="deleteWarning">Are you sure you want to delete this? There\'s no going back</string>
    <string name="connectivityError">Server Timeout. Check your network settings and try again</string>
    <string name="changeEmail">Change Email:</string>
    <string name="logout">Logout</string>
    <string name="changeEmailGuest">Guests can\'t change their email, logout and join our app</string>
    <string name="featureNotImplemented">This feature has not been implemented</string>
    <string name="userUpdated">Your email has been updated successfully</string>
    <string name="semesterIDSharedPreference">0</string>
    <string name="nullCourseError">You must select a course</string>
    <string name="allAssignments">All Assignments</string>
    <string name="courseIDSharedPreference">1</string>

</resources>