<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/backtoschool"
    tools:context=".AddAssignmentActivity" >

    <LinearLayout
        android:id="@+id/center"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight=".5"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:textColor="#FFFFFF"
                android:text="@string/name" />

            <EditText
                android:id="@+id/addCourseName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="#FFFFFF"
                android:layout_weight=".5"
                android:hint="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:textColor="#FFFFFF"
                android:text="@string/time" />

            <EditText
                android:id="@+id/courseTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight=".5"
                android:background="#FFFFFF"
                android:hint="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/locationLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:textColor="#FFFFFF"
                android:text="@string/location" />

            <EditText
                android:id="@+id/courseLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight=".5"
                android:background="#FFFFFF"
                android:hint="" />
        </LinearLayout>

        <Button
            android:id="@+id/guestbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:onClick="addCourse"
            android:text="@string/submit" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/assignmentCategory4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/addmore" 
                android:onClick="addAnotherView"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/right"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight=".5"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/MyList"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:descendantFocusability="beforeDescendants" >
        </ListView>
    </LinearLayout>

</LinearLayout>